--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
   @media (max-width: 940px) {
     #header {
       width:50%;
-      height:45%;
+      height:40%;
       text-align: left;
       flex-direction: column;
     }
@@ -93,9 +93,9 @@
     color:#fd5f00;
   }
   
-  
+
   #header-img{
-    width:100;
+    width:100px;
   }
   
   
@@ -120,7 +120,7 @@
   
   #video{
     width:46%;
-    height:50%;
+    height: 100%;
     margin:1rem;
     border: 5px solid black;
     border-radius: 25px;
